RESOLVED FIXED12970
Fix and import 4XPath test_core_functions.html test
https://bugs.webkit.org/show_bug.cgi?id=12970
Summary Fix and import 4XPath test_core_functions.html test
Alexey Proskuryakov
Reported 2007-03-05 11:27:08 PST
Patch forthcoming.
Attachments
proposed fix (17.65 KB, patch)
2007-03-05 11:36 PST, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2007-03-05 11:36:42 PST
Created attachment 13479 [details] proposed fix
Darin Adler
Comment 2 2007-03-05 12:13:40 PST
Comment on attachment 13479 [details] proposed fix r=me That round function looks kinda elaborate, maybe it can be done simpler later.
Alexey Proskuryakov
Comment 3 2007-03-05 12:53:06 PST
Committed revision 19968. (In reply to comment #2) > That round function looks kinda elaborate, maybe it can be done simpler later. It's a direct translation of the wording in the spec, but I couldn't find a better way to implement it. I also looked into Mozilla sources for inspiration.
Note You need to log in before you can comment on or make changes to this bug.