        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=12970
        Fix and import 4XPath test_core_functions.html test

WebCore:

        * xml/XPathExpression.cpp:
        (WebCore::XPathExpression::evaluate): Fully initialize the evaluation context.

        * xml/XPathFunctions.cpp:
        (WebCore::XPath::FunSubstring::doEvaluate): Fixed handling of edge cases.
        (WebCore::XPath::FunRound::round): Reimplemented to match the spec; exposed FunRound::round() to be used in
        other functions.

LayoutTests:
        * fast/xpath/4XPath/Core/test_core_functions-expected.txt: Added.
        * fast/xpath/4XPath/Core/test_core_functions.html: Added.
        The remaining failures with id() are caused by an XML DOM problem - ID attributes declared
        in an internal subset are not treated as such.

        * fast/xpath/4XPath/Core/test.js: Common data for XPath tests.



Canonical link: https://commits.webkit.org/16791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19968 268f45cc-cd09-0410-ab3c-d52691b4dbfc