WebCore/xml/XPathExpression.cpp
@@ -71,7 +71,9 @@ PassRefPtr<XPathResult> XPathExpression::evaluate(Node* contextNode, unsigned sh
         ? contextNode->ownerDocument()
         : static_cast<EventTargetNode*>(contextNode);
 
-    Expression::evaluationContext().node = contextNode;    
+    Expression::evaluationContext().node = contextNode;
+    Expression::evaluationContext().size = 1;
+    Expression::evaluationContext().position = 1;
     m_topExpression->optimize();
     RefPtr<XPathResult> result = new XPathResult(eventTarget, m_topExpression->evaluate());
 
